# autoresearch-gaudi

./: .env.example  .gitignore  Dockerfile.autoresearch-gaudi  LICENSE  README.md  analysis.ipynb  autoresearch-debug.yaml  autoresearch-job.yaml  build-push-autoresearch-gaudi.sh  program.md  pyproject.toml  template.yaml  train.py
deploy/: Dockerfile.autoresearch-gaudi  autoresearch-debug.yaml  autoresearch-job.yaml  build-push-autoresearch-gaudi.sh
experiments/gpt_train/: experiment.json  prepare.py  program.md  scorer.py  train.py
harness/: run_loop.py
