[project]
name = "autoresearch-gaudi"
version = "0.1.0"
description = "Autonomous pretraining research swarm (Intel Gaudi 2 / HPU)"
readme = "README.md"
requires-python = ">=3.10"
# NOTE: torch is NOT listed here. On Intel Gaudi (HPU) the PyTorch build ships
# with the Intel Gaudi software stack (habana_frameworks) inside the base
# container image (vault.habana.ai/.../pytorch-installer-2.9.0). Installing torch
# from PyPI/CUDA would clobber that build. The FA3 `kernels` package is CUDA-only
# and is replaced by HPU fused SDPA.
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "requests>=2.32.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
]
